appId: org.wikipedia
tags:
  - android
  - passing
  - advanced
---
- runFlow: subflows/onboarding-android.yaml
- tapOn:
    id: "org.wikipedia:id/search_container"
- tapOn:
    text: "Non existent view"
    optional: true
- runScript: scripts/getSearchQuery.js
- inputText: Thập lý đào hoa
- assertVisible: Thap ly dao hoa
- runFlow: subflows/launch-clearstate-android.yaml
